--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  flutter_builder_ui:
+  flutter_builder_ui_kit:
     path: ../
   font_awesome_flutter: ^10.8.0
   url_launcher: ^6.3.1
